# myproject

./: .coverage  .dccache  .gitignore  README.md  pyproject.toml
.github/workflows/: .python-lint.yml.swp  python-app.yml  python-format.yml  python-lint.yml  python-test.yml  test.yml
.github/workflows/.iac-data/: arm_data.json
junit/: test-results.xml
src/addsub/: add.py  subtract.py  unformatted.py
src/ideaprint/: helloworld.py
tests/: test_add.py  test_sub.py
