[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "A demo python project with GitHub CI/CD Actions for formatting and testing code"
authors = ["Robert Alexander <gogonegro@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pylint = "^2.15.10"
autopep8 = "^2.0.1"
isort = "^5.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
